# MassFlow_v0.1

./: .gitignore  .pylintrc  README.md  README_CN.md  main.py  pyproject.toml
docs/en/: metadata.md  (+10 more)
outcome_of_test/: cardinal-pipeline.md  massflow-only-compute.md  massflow-pipeline.md  task.md
plot_for_paper/: plot.py  plot_3.py
plot_image/: plot.py  plot_baseline.py  plot_for_ppt.py  plot_noise_reduction.py  plot_normalization.py  plot_peak_align.py  plot_peak_pick.py
plot_image_python/: plot.py  plot_baseline.py  plot_noise_reduction.py  plot_normalization.py  plot_peak_align.py  plot_peak_pick.py
tests/: cardinal_time&memory_benchmarks.md  massflow_time&memory_benchmarks.md  massflow_time&memory_onlyconpute_benchmarks.md  new_mid_file_pipeline.md  new_mid_file_pipeline_cardinal.md  only_compute_new.md  only_compute_new_mid.md  only_compute_new_original.md  peak_align_new_test-只用了min.md  peak_align_new_test.md  pipeline_outcome.py  plot_image_cardinalvsflat.py  python_outcome.py  test_align_memory.py  test_align_speed.py  test_all_baseline.py  test_all_normalize.py  test_async_pipeline.py  test_async_pipeline_stages.py  test_baseline.py  test_baseline_correction_numba.py  test_baseline_memory.py  test_baseline_speed.py  test_est.py  test_m2aia_normalization_benchmark.py  test_m2aia_read_all_spectra_benchmark.py  test_m2aia_smoothing_benchmark.py  test_main_plot.py  test_matrix_generator.py  test_noise_reduction.py  test_noise_reduction_memory.py  test_noise_reduction_numba.py  test_noise_reduction_speed.py  test_normalization.py  test_normalization_memory.py  test_normalization_numba.py  test_normalization_speed.py  test_normalize.py  test_numba_runtime.py  (+11 more)
(+86 files in other folders)
