[project]
name = "massflow"
version = "0.1.0"
description = "MassFlow is a modular, high-performance framework for Mass Spectrometry Imaging (MSI) data."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama>=0.4.6",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyimzml>=1.5.5",
    "pympler>=1.1",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-benchmark>=5.2.3",
    "pytest-memray>=1.8.0",
    "pytest-monitor>=1.6.6",
]
