[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "massflow"
version = "0.1.0"
description = "MassFlow is a modular, high-performance framework for Mass Spectrometry Imaging (MSI) data."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama>=0.4.6",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pyimzml>=1.5.5",
    "pympler>=1.1",
    "pywavelets>=1.9.0",
    "scipy>=1.16.3",
    "uuid>=1.30",
]

[project.optional-dependencies]
r = [
    "rpy2>=3.6.4",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "pytest>=9.0.1",
    "pytest-benchmark>=5.2.3",
    "pytest-memray>=1.8.0; sys_platform != 'win32'",
    "pytest-monitor>=1.6.6",
]

[tool.pytest.ini_options]
addopts = "--benchmark-warmup=off --benchmark-disable-gc"

[tool.pytest_benchmark]
# Force time unit to seconds
timer = "time.perf_counter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
